--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.0",
+    "@angular-devkit/core": "^15.0.4",
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "~12.0.0",
     "@types/jasmine": "~3.7.1",
